services/ladder/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: ladder
spec:
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
