services/ladder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladder
  namespace: ladder
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ladder.labmatt.com
      secretName: ladder-tls
  rules:
    - host: ladder.labmatt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ladder
                port:
                  number: 8080
